WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139423
Copy and Lookup menu items should be disabled when something is not copyable
https://bugs.webkit.org/show_bug.cgi?id=139423
Summary
Copy and Lookup menu items should be disabled when something is not copyable
Beth Dakin
Reported
2014-12-08 16:58:53 PST
Copy and Lookup menu items should be disabled when something is not selectable
rdar://problem/19149219
Attachments
Patch
(11.90 KB, patch)
2014-12-08 17:05 PST
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-12-08 17:05:32 PST
Created
attachment 242864
[details]
Patch
Tim Horton
Comment 2
2014-12-08 17:12:45 PST
Comment on
attachment 242864
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=242864&action=review
> Source/WebCore/rendering/HitTestResult.cpp:549 > + Node* node = innerNode();
It seems like we need to run over all of the nodes in the range that we expand out to, not just the HitTestResult's innerNode (for user-select: none).
> Source/WebKit2/UIProcess/mac/WKActionMenuController.mm:783 > + if (!hitTestResult->allowsCopy()) {
You can move this into the thing that makes them.
> Source/WebKit/mac/WebView/WebActionMenuController.mm:481 > + if (!_hitTestResult.allowsCopy()) {
Ditto.
Beth Dakin
Comment 3
2014-12-08 17:30:07 PST
Thank you!
http://trac.webkit.org/changeset/176999
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug