Source/WebCore/rendering/HitTestResult.h
@@ -126,6 +126,7 @@ public:
     void toggleMediaMuteState() const;
     bool isDownloadableMedia() const;
     bool isOverTextInsideFormControlElement() const;
+    bool allowsCopy() const;
 
     // Returns true if it is rect-based hit test and needs to continue until the rect is fully
     // enclosed by the boundaries of a node.
